--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/dajuly20/node-red-contrib-pylips-philips-tv-control#readme",
   "main": "pylips.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "if cd pylips; then git pull; else git clone https://github.com/dajuly20/pylips.git pylips;fi"
   },
   "keywords": [
     "Philips",
