--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "url": "git+https://github.com/dajuly20/node-red-contrib-pylips-philips-tv-control.git"
   },
   "node-red": {
-    "version": ">=2.0.0",       
+    "version": ">=2.0.0",
     "nodes": {
       "example-node": "pylips.js"
     }
   },
   "engines": {
-     "node": ">=12.0.0"
-     },
+    "node": ">=12.0.0"
+  },
   "description": "This is only a subflow which then calls the python script in pylips. So the rest of the readme is directly copied from there.",
   "bugs": {
     "url": "https://github.com/dajuly20/node-red-contrib-pylips-philips-tv-control/issues"
@@ -22,7 +22,11 @@
   "homepage": "https://github.com/dajuly20/node-red-contrib-pylips-philips-tv-control#readme",
   "main": "pylips.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "napa"
+  },
+  "napa": {
+    "pylips": "dajuly20/pylips"
   },
   "keywords": [
     "Philips",
@@ -32,7 +36,7 @@
     "node-red"
   ],
   "license": "ISC",
-  "dependencies": {
-    "pylips": "git+https://github.com/dajuly20/pylips.git"
-    }
+  "devDependencies": {
+    "napa": "^3.0.0"
+  }
 }
