--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   "main": "pylips.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "napa"
-  },
-  "napa": {
-    "pylips": "git+https://github.com/dajuly20/pylips.git"
+    "install": "napa git+https://github.com/dajuly20/pylips.git:pylips"
   },
   "keywords": [
     "Philips",
@@ -36,6 +33,12 @@
     "node-red"
   ],
   "license": "ISC",
+  "devDependencies": {
+    "napa": "^3.0.0"
+  },
+  "napa-config": {
+    "cache": false
+},
   "dependencies": {
     "napa": "^3.0.0"
   }
